endpoint verification with postman 3